# pykemon

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
data-raw/: build_db.py  insert_all_file.py  read_tables.py  run_db.py
data-raw/raw/: base_teams.json
docs/: API.md  getting-started.md  index.md  power-creep.md  team_editor.md
src/: pokemon_webscrapper.py
src/pykemon/: __init__.py  battle.py  db.py  socket_battle.py
src/pykemon/CRUD/: team.py  team_editor.py  team_pokemon.py  team_pokemon_move.py  test_inserts.py
src/pykemon/battle/: client.py  default_teams.py  server.py
