[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "pykemon"
version = "0.0.1"
description = "A Python package for accessing a rich Pokémon database across all 9 generations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.5.1",
    "requests>=2.33.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]
authors = [
  { name = "Jonathan Oliphant", email = "oli23020@byui.edu" },
  { name = "Mitchell Mecham", email = "mec21017@byui.edu" },
  { name = "Caleb Peterson", email = "pet22063@byui.edu" },
  { name = "Tucker Trost", email = "tro18011@byui.edu" },
]

[project.urls]
Documentation = "https://byuirpytooling.github.io/pykemon"
Repository = "https://github.com/byuirpytooling/pykemon"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]

[dependency-groups]
dev = [
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]